--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "extends": "stylelint-config-standard",
   "ignoreFiles": [
+    "src/**/scss/generic/*.scss",
     "src/**/scss/tools/*.scss",
     "src/**/scss/trumps/*.scss",
   ],
