--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "browser-sync": "^2.26.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
